--- a/WS05/DIY/DIY.vcxproj.filters
+++ b/WS05/DIY/DIY.vcxproj.filters
@@ -15,15 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Mark.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Mark.cpp">
+    <ClCompile Include="markMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="markMain.cpp">
+    <ClCompile Include="Mark.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mark.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
